Add lint staged

--- a/http-server/registration.html
+++ b/http-server/registration.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -42,7 +42,7 @@
       }
 
       h1 {
-        font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
         color: #28a745;
         margin-bottom: 20px;
         font-size: 2em;
@@ -65,10 +65,10 @@
         margin-bottom: 5px;
       }
 
-      input[type="text"],
-      input[type="email"],
-      input[type="password"],
-      input[type="date"] {
+      input[type='text'],
+      input[type='email'],
+      input[type='password'],
+      input[type='date'] {
         width: 100%;
         padding: 10px;
         border: 1px solid #ccc;
