--- a/http-server/project.html
+++ b/http-server/project.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -47,7 +47,9 @@
         padding: 10px 20px;
         border: 2px solid #007bff;
         border-radius: 5px;
-        transition: background-color 0.3s, color 0.3s;
+        transition:
+          background-color 0.3s,
+          color 0.3s;
       }
 
       a:hover {
